--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	This is my GitHub hosted website. 
-	My favorite food is either pizza or pasta.
-	My favorite pets are my two cats named Sarge and Bob.
-	My favorite place is Tokyo.
-	My favorite saying is "Don't give up until it's over".
+	<p>My favorite food is either pizza or pasta.</p>
+	<p>My favorite pets are my two cats named Sarge and Bob.</p>
+	<p>My favorite place is Tokyo.</p>
+	<p>My favorite saying is "Don't give up until it's over".</p>
 </body>
 </html>
