--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	<p>My favorite pets are my two cats named Sarge and Bob.</p>
 	<p>My favorite place is Tokyo.</p>
 	<p>My favorite saying is "Don't give up until it's over".</p>
+	<p>Sarge says hi.</p>
 </body>
 </html>
