Updated Main Page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<p>My favorite pets are my two cats named Sarge and Bob.</p>
 	<p>My favorite place is Tokyo.</p>
 	<p>My favorite saying is "Don't give up until it's over".</p>
-	<p>Sarge says hi.</p>
+	<p>Sarge says hi. He's chewing on my wires. I have to go feed him. Be right back.</p>
 </body>
 </html>
